--- a/app/views/main.html
+++ b/app/views/main.html
@@ -7,10 +7,13 @@
   <p>
     Smart checkbox list directive
     ...
+
+    <span ng-bind="smartList" />
+    <smart-checkbox model="smartList" />
   </p>
 
 </div>
 
 <div class="footer">
-  <p>♥ from the Yeoman team</p>
+  <p>Built with Yeoman's generator-angular</p>
 </div>
