fixed tests (todo: more tests)

--- a/app/views/main.html
+++ b/app/views/main.html
@@ -5,10 +5,8 @@
 <div class="row marketing">
   <h4>Smart checkbox list</h4>
   <p>
-    Smart checkbox list directive
-    ...
-
-    <span ng-bind="smartList" />
+    Smart checkbox list directive for:
+    {{smartList}}
     <br />
     <br />
     <br />
