--- a/app/views/smartcheckbox.html
+++ b/app/views/smartcheckbox.html
@@ -8,7 +8,7 @@
   </div>
 
   <div class="input-group selectoptionscontrols">
-    <button id="select-all" type="button" class="btn btn-default btn-sm">Select all</button>
+    <button id="select-all" ng-click="selectAll()" type="button" class="btn btn-default btn-sm">Select all</button>
     <button type="button" class="btn btn-default btn-sm">Unselect all</button>
     <button type="button" class="btn btn-default btn-sm">Toggle</button>
   </div>
