--- a/app/views/smartcheckbox.html
+++ b/app/views/smartcheckbox.html
@@ -10,7 +10,7 @@
   <div class="input-group selectoptionscontrols">
     <button id="select-all" ng-click="selectAll()" type="button" class="btn btn-default btn-sm">Select all</button>
     <button id="unselect-all" ng-click="unselectAll()" type="button" class="btn btn-default btn-sm">Unselect all</button>
-    <button type="button" class="btn btn-default btn-sm">Toggle</button>
+    <button id="toggle-all" ng-click="toggleAll()" type="button" class="btn btn-default btn-sm">Toggle</button>
   </div>
 
   <div class="input-group ordercontrols">
