--- a/app/views/smartcheckbox.html
+++ b/app/views/smartcheckbox.html
@@ -29,8 +29,8 @@
   <div class="checkboxes">
     <div class="checkbox widgetcontrols" ng-repeat="elem in filtered = (model | filter:{$:filter} | orderBy: orderby:reverse)">
       <label>
-        <input ng-if="requiredFn" class="smart" type="checkbox" ng-model="elem.value" ng-required="requiredFn"/>
-        <input ng-if="!requiredFn" class="smart" type="checkbox" ng-model="elem.value" />
+        <input ng-if="isRequired()" class="smart" type="checkbox" ng-model="elem.value" ng-required="requiredFn"/>
+        <input ng-if="!isRequired()" class="smart" type="checkbox" ng-model="elem.value" />
         <span class="itemid">[{{elem.id}}]</span> {{elem.label}}
       </label>
     </div>
