optimized directive with watch

--- a/app/views/smartcheckbox.html
+++ b/app/views/smartcheckbox.html
@@ -35,7 +35,7 @@
   </div>
 
   <div class="checkboxes">
-    <div class="checkbox widgetcontrols" ng-repeat="elem in elements()">
+    <div class="checkbox widgetcontrols" ng-repeat="elem in filtered">
       <label>
         <input ng-if="isRequired()" class="smart" type="checkbox" ng-model="elem.value" ng-required="requiredfn()(elem, selected)" />
         <input ng-if="!isRequired()" class="smart" type="checkbox" ng-model="elem.value" />
